Ignore .mat version of test script file and autosave files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ slprj
 *.mexw32
 rs*
 /DistributionSystems/SimulinkOpal/Device_Integration_Test_01/CMD_signals.mat
+/DistributionSystems/SimulinkOpal/Device_Integration_Test_01/*.autosave
