--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ slprj
 rs*
 /DistributionSystems/SimulinkOpal/Device_Integration_Test_01/CMD_signals.mat
 /DistributionSystems/SimulinkOpal/Device_Integration_Test_01/*.autosave
+/CaseStudies/Test Procedure Scripts and Excel File/testScript_model_EGC.mdl.original
+/CaseStudies/Test Procedure Scripts and Excel File/INTEGRATION_TEST_01_init.m
