--- a/Components/SimulinkOpal/HWCtrl_IO_InterfaceBlocks/OPAL-RT Bitstream Files/OP5142_1-EX-0000-2_3_5_87-16AI_48AO_32DIO_16DO_16selDO_CD-FF-01.conf
+++ b/Components/SimulinkOpal/HWCtrl_IO_InterfaceBlocks/OPAL-RT Bitstream Files/OP5142_1-EX-0000-2_3_5_87-16AI_48AO_32DIO_16DO_16selDO_CD-FF-01.conf
@@ -23,7 +23,6 @@ DataOut1  AI          1    B       1          8     16
 DataOut2  AI          1    B       2          8     16
 DataOut3  DI          4    A       1          8     1 
 DataOut4  DI          4    A       2          8     1 
-DataOut5  TSDI        4    A       3          -1    32
-DataOut6  TSDI        4    A       4          -1    32
-DataOut7  PWMI        4    A       3          8     64
-DataOut8  PWMI        4    A       4          8     64
+DataOut5  DI          4    A       3          8     1
+DataOut6  DI          4    A       4          8     1
+
